<resources>
    <string name="app_name">YTSendCommAntiFraud</string>
    <string name="xposeddescription">🤣👉 U.S. Constitution: Freedom of speech 🤡</string>
    <string name="checking_video_comment">Checking video comment</string>
    <string name="close">close</string>
    <string name="find_has_account_comment_list_dialog">Looking for page %d of the list of comments sorted by time has an account……</string>
    <string name="find_not_account_comment_list_dialog">Looking for page %d of the list of comments sorted by time without an account……</string>
    <string name="continue_to_check_if_is_shadow_banned_dialog">Your comment was found in the has an account comment list sorted by time . Continue to check whether it has been ShadowBanned……</string>
    <string name="check_result">check result</string>
    <string name="comment_has_been_deleted">the comment has been delete! comment content:</string>
    <string name="comment_has_been_shadow_banned">the comment is ShadowBan (Visible only to yourself) state!If you don\'t want to modify your comment, you can ask the video author to check whether your comment is in the "Held for review" comment list. comment content:</string>
    <string name="the_comment_is_normal">the comment is normal!comment content:</string>
    <string name="wait_xxx_ms">wait[%d/%d]ms</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="menu">MENU</string>
    <string name="copy">copy</string>
    <string name="delete">delete</string>
    <string name="save_historical_comments">Save historical comments</string>
    <string name="historical_comment_list">Historical comment list</string>
    <string name="to_be_checked_comment">To be checked comments</string>
    <string name="wait_time_after_a_comment_is_sent">Wait time after a comment is sent</string>
    <string name="module_enabled">Module is enabled</string>
    <string name="module_is_not_enabled">Module is not enabled</string>
    <string name="statistics">Statistics</string>
    <string name="pending">Pending</string>
    <string name="settings">Settings</string>
    <string name="a_list_of_comments_to_check">A list of comments to check</string>
    <string name="historical_comments">Historical comments</string>
    <string name="comment_info">Comment info</string>
    <string name="copied">copied</string>
    <string name="deleted_successfully">deleted successfully!</string>
    <string name="delete_failed">delete failed!</string>
    <string name="confirm_deletion">Confirm deletion? (This won\'t delete your YouTube comments)</string>
    <string name="normal">normal</string>
    <string name="shadow_ban">shadow ban</string>
    <string name="has_been_deleted">has been deleted</string>
    <string name="shadow_ban__desc">shadow ban (visible only to oneself)</string>
    <string name="comment_content">comment content</string>
    <string name="state">state</string>
    <string name="comment_id">comment id</string>
    <string name="sent_date">sent date</string>
    <string name="video_id">video id</string>
    <string name="options">Options</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="export">Export</string>
    <string name="import_">Import</string>
    <string name="sorting_method">Sorting method</string>
    <string name="sent_date__n_o">Sent date(New-Old)</string>
    <string name="sent_date__o_n">Sent date(Old-New)</string>
    <string name="Normal">Normal</string>
    <string name="Has_been_deleted">Has been deleted</string>
    <string name="export_failed">Export failed, exception message:</string>
    <string name="wait_time_before_checking">Wait time before checking</string>
    <string name="time_interval_for_refinding">Time interval for refinding</string>
    <string name="upper_limit_on_the_number_of_retries">Upper limit on the number of retries (count)</string>
    <string name="backstage_wait_time">Backstage wait time (seconds)</string>
    <string name="help">help</string>
    <string name="enable_saving_history_comments">Enable saving history comments</string>
    <string name="disable_saving_history_comments">Disable saving history comments</string>
    <string name="set_the_waiting_time_after_posting_the_comment">Set the waiting time after Posting the comment (Milliseconds/ms)</string>
    <string name="permission_required">Permission required</string>
    <string name="error_occurred">Error occurred:</string>
    <string name="not_found_headers_txt_youtube">Error occurred: headers.txt was not found. Please try to open YouTube to retrieve it again</string>
    <string name="failed_to_get_the_list_of_comments">Failed to get the list of comments</string>
    <string name="received_401_status_code">Received 401 status code, Session(Authorization) has expired, please open YouTube once, refresh it, the captured Session and other information will be saved to \n…/Android/media/com.google.android.youtube/headers.txt \n to open the youtube and return to normal after seeing video list to continue to check this application. The Session is valid for one hour, and needs to be re-acquired after the expiration. Please understand the trouble!</string>
    <string name="Launch_YouTube">Launch YouTube</string>
    <string name="request_folder_permission">Please grant folders: …/Android/media/com.google.android.youtube/headers.txt permissions, open the youtube captured by the request header information will be kept in here (for account verification, refresh Session one hour, if the failure to open the youtube please make it refresh)</string>
    <string name="please_grant_notification_permission">Please grant notification permission</string>
    <string name="checking">Checking</string>
    <string name="waiting_in_the_background">Waiting in the background</string>
    <string name="error">Error</string>
    <string name="an_error_occurred">There was an error. Do you want to try again? Error message:%s</string>
    <string name="OnReCheckIfIsDeleted">The comment section under no account still does not find the comment after refinding the setting times, which will be determined as ShadowBan. In order to avoid the misjudgment caused by the deletion of the comment section under the account during this period, check again whether there is this comment section under the account. \n(page %d)</string>
    <string name="OnSearchAgainGetComments">Getting the list of comments and looking for (page %d)…</string>
    <string name="OnSearchAgainProgress">No account did not find your comment, but found the anchor, waiting to find again…… \n has researched [%d/%d] times \n wait [%d/%d]ms</string>
    <string name="OnSearchAgainProgressForNoAnchor">No account can not find your comment, and no anchor comment (will scroll through the entire comment section!) Waiting to be found again… \n has researched [%d/%d] times \n wait [%d/%d]ms</string>
</resources>