<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:shrinkColumns="1">
            <TableRow
                android:layout_marginVertical="5dp">
                <TextView
                    android:foreground="?selectableItemBackground"
                    android:id="@+id/txv_copy_comment"
                    android:text="@string/comment_content"
                    />

                <TextView
                    android:id="@+id/txv_comment_content"
                    android:layout_marginLeft="10dp"
                    android:textIsSelectable="true"/>
            </TableRow>
            <TableRow
                android:layout_marginVertical="5dp">
                <TextView
                    android:text="@string/state"/>
                <TextView
                    android:id="@+id/txv_state"
                    android:layout_marginLeft="10dp"
                    android:textIsSelectable="true"/>
            </TableRow>
            <TableRow
                android:layout_marginVertical="5dp">

                <TextView
                    android:foreground="?selectableItemBackground"
                    android:id="@+id/txv_source_id_desc"
                    android:text="评论区源ID" />

                <TextView
                    android:id="@+id/txv_source_id"
                    android:layout_marginLeft="10dp"
                    android:textIsSelectable="true"/>
            </TableRow>
            <TableRow
                android:layout_marginVertical="5dp">

                <TextView android:text="@string/comment_id" />

                <TextView
                    android:id="@+id/txv_comment_id"
                    android:layout_marginLeft="10dp"
                    android:textIsSelectable="true"/>
            </TableRow>


            <TableRow
                android:layout_marginVertical="5dp">
                <TextView
                    android:text="@string/sent_date"/>
                <TextView
                    android:id="@+id/txv_send_date"
                    android:layout_marginLeft="10dp"
                    android:textIsSelectable="true"
                    />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</LinearLayout>