<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/img_module_status"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/baseline_done_all_24" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txv_module_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:text="模块状态"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/background"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/eat_comment"
            android:elevation="5dp"
            android:translationZ="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginBottom="14dp"
                android:gravity="center_vertical"
                android:text="@string/menu"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="6dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/statistics"
                        android:textSize="12sp" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_recorde_history_comment_sw"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground">

                    <FrameLayout

                        android:id="@+id/frameLayout1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:src="@drawable/record" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:gravity="center_vertical"
                        android:maxLines="2"
                        android:text="@string/save_historical_comments"
                        android:textColor="@color/dark_font"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toStartOf="@+id/sw_save_history"
                        app:layout_constraintStart_toEndOf="@+id/frameLayout1" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sw_save_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:focusable="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/ll_history_comment"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="48dp"
                        android:layout_height="48dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:src="@drawable/history" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/historical_comment_list"
                        android:textColor="@color/dark_font"
                        android:textSize="14sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="6dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/pending"
                        android:textSize="12sp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/not_checked_comment"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground">

                    <FrameLayout
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:src="@drawable/baseline_restore_24" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:gravity="center_vertical"
                        android:maxLines="2"
                        android:text="@string/to_be_checked_comment"
                        android:textColor="@color/dark_font"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@+id/frameLayout2" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="6dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/settings"
                        android:textSize="12sp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_wait_time"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground">

                    <FrameLayout
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_baseline_timer_24" />
                    </FrameLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:gravity="center_vertical"
                        android:maxLines="2"
                        android:text="@string/wait_time_after_a_comment_is_sent"
                        android:textColor="@color/dark_font"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@+id/frameLayout2" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>